--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-helmet-async": "^1.3.0",
     "react-pdf": "^7.5.0",
     "react-pdf-viewer": "^0.1.0",
