--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-helmet-async": "^1.3.0",
     "react-pdf": "^7.5.0",
     "react-pdf-viewer": "^0.1.0",
